<resources>

    <string name="app_name">FhaloLauncher</string>

    <!-- pretest defination -->
    <string name="vibrator_test_button">马达测试</string>
    <string name="led_test_button">心率血样传感器测试</string>
    <string name="gsensor_test_button">加速计测试</string>
    <string name="key_test_button">按键测试</string>
    <string name="touchscreen_test_button">触屏测试</string>
    <string name="net_test_button">网络测试</string>
    
    <string name="stop_key_test_button">返回</string>
    <string name="touchscreen_test_button1">触摸1点</string>
    <string name="touchscreen_test_button2">触摸2点</string>
    <string name="touchscreen_test_button3">触摸3点</string>
    <string name="touchscreen_test_button4">触摸4点</string>
    
    <string name="open_net_test_button">打开网络</string>
    <string name="close_net_test_button">关闭网络</string>
    <string name="get_info_test_button">获取网络参数</string>
    
    <string name="open_bpm_test_button">打开心率传感器测试</string>
    <string name="open_spo2_test_button">打开血氧传感器测试</string>
</resources>
