<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <Button android:id="@+id/touchscreen_test_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/touchscreen_test_button1"
        android:textAlignment="center" />
    <Button android:id="@+id/touchscreen_test_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/touchscreen_test_button2"
        android:textAlignment="center" />
    <Button android:id="@+id/touchscreen_test_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/touchscreen_test_button3"
        android:textAlignment="center" />
    <Button android:id="@+id/touchscreen_test_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/touchscreen_test_button4"
        android:textAlignment="center" />
    <TextView 
	    android:id="@+id/show_touchscreen_info"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerInParent="true"
    	android:textAlignment="center"
    	android:textSize="@dimen/pretest_gsensor_text_size"/>

</RelativeLayout>
