<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">"
    	    <Button android:id="@+id/open_net_test_button"
    	        style="android:attr/borderlessButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/open_net_test_button"
		        android:textAlignment="center" />
		    <Button android:id="@+id/close_net_test_button"
		        style="android:attr/borderlessButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/close_net_test_button"
		        android:textAlignment="center" />
		    <Button android:id="@+id/get_info_test_button"
		        style="android:attr/borderlessButtonStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/get_info_test_button"
		        android:textAlignment="center" />
    </LinearLayout>

    <TextView android:id="@+id/show_net_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
</LinearLayout>
